# esp-privilege-separation

./: .gitlab-ci.yml  README.md
.github/workflows/: issue_comment.yml  new_issues.yml  new_prs.yml
components/build_utility/: project_include.cmake
components/drivers/spi/: CMakeLists.txt  vfs_spi.c
components/drivers/ws2812/: led_strip.h  led_strip_rmt_ws2812.c  ws2812.c
components/esp_priv_access/: CMakeLists.txt  Kconfig.projbuild  esp_priv_access_commands.c  esp_priv_access_console.c  esp_priv_access_console.h  esp_priv_access_image_utility.c  esp_priv_access_panic.c  esp_priv_access_priv.h  esp_priv_access_setup.c  project_include.cmake
components/esp_priv_access/include/: esp_priv_access.h  permc_ll.h  soc_defs.h  wcntl_ll.h
components/esp_priv_access/ld/protected_app/esp32c3/: reserve.ld
components/esp_priv_access/ld/user_app/esp32c3/: user.ld
components/esp_priv_access/utility/: gen_lib_list.py
components/esp_ps/: CMakeLists.txt  Kconfig  esp_ps_image_utility.c  esp_ps_panic.c  esp_ps_priv.h  esp_ps_setup.c  project_include.cmake
components/esp_ps/include/: esp_ps.h  permc_ll.h  soc_defs.h  wcntl_ll.h
components/esp_ps/ld/protected_app/esp32c3/: reserve.ld
components/esp_ps/ld/user_app/esp32c3/: user.ld
components/esp_syscall/: CMakeLists.txt  Kconfig
components/esp_syscall/include/: syscall_structs.h  syscall_wrappers.h
components/esp_syscall/priv_include/: esp_map.h
components/esp_syscall/src/: ecall_context.h  esp_map.c  esp_syscall_table.c  esp_syscalls.c  syscall_handler.S  syscall_priv.h  syscall_wrappers.c
components/esp_syscall/syscall/: override.tbl  syscall.tbl  syscalldefsym.sh  syscallhdr.sh  syscalltbl.sh
components/protected/esp_priv_access/: CMakeLists.txt  Kconfig.projbuild  esp_priv_access_console.c  esp_priv_access_image_utility.c  esp_priv_access_ota_utils.c  esp_priv_access_panic.c  esp_priv_access_priv.h  esp_priv_access_secure_boot.c  esp_priv_access_setup.c
components/protected/esp_priv_access/include/: esp_priv_access.h  esp_priv_access_ota_utils.h
components/protected/esp_priv_access/include/esp32c3/: periph_enum.h  permc_ll.h  wcntl_ll.h
components/protected/esp_priv_access/include/esp32s3/: periph_enum.h  permc_ll.h  wcntl_ll.h
components/protected/esp_syscall/: CMakeLists.txt
components/protected/esp_syscall/src/: esp_syscalls.c
components/protected/esp_syscall/src/xtensa/: syscall_context.h  syscall_handler.S
components/protected/esp_syscall/syscall/: syscall.tbl  syscallhdr.sh
components/protected/esp_user_ota/: CMakeLists.txt  Kconfig  esp_user_ota.c  esp_user_ota.h
components/shared/esp_priv_build_utils/: CMakeLists.txt  project_include.cmake
components/shared/esp_priv_build_utils/include/: soc_defs.h
components/shared/esp_priv_build_utils/ld/user_app/esp32c3/: user.ld
components/shared/esp_priv_build_utils/ld/user_app/esp32s3/: user.ld
components/shared/esp_priv_build_utils/utility/: extract_memory_boundaries.sh
components/user/idf_stubs/esp32c3/: CMakeLists.txt
components/user/idf_stubs/esp_system/: CMakeLists.txt
components/user/idf_stubs/esp_wifi/: CMakeLists.txt
components/user/idf_stubs/freertos/: CMakeLists.txt
components/user/startup_utilities/: CMakeLists.txt  startup_utilities.c
components/user/startup_utilities/xtensa/: user_app_vectors.S
components/user/syscall_wrapper/: CMakeLists.txt  syscall_wrappers.c
components/user/syscall_wrapper/include/: syscall_macros.h  syscall_wrappers.h
components/user/syscall_wrapper/include/xtensa/: syscall_macros.h
components/user/user_console/: CMakeLists.txt  user_commands.c  user_console.c  user_console.h
components/user_app_components/esp32c3/: CMakeLists.txt
components/user_app_components/esp_event/: esp_event_definitions.c
components/user_app_components/esp_rom/: CMakeLists.txt
components/user_app_components/esp_timer/: CMakeLists.txt
components/user_app_components/esp_wifi/: CMakeLists.txt
components/user_app_components/esptool_py/: Kconfig.projbuild
components/user_app_components/freertos/: CMakeLists.txt  freertos_stubs.c
components/user_app_components/idf_stubs/freertos/: CMakeLists.txt  Kconfig
components/user_app_components/partition_table/: project_include.cmake
components/user_app_components/spi_flash/: CMakeLists.txt
docs/: Doxyfile  README.md  conf.py  conf_common.py  implementation-details.md  index.rst  link-roles.py
docs/_static/: privilege_separation_versions.js
docs/api-reference/: esp_ps.rst  index.rst
docs/en/: conf.py  getting-started.rst  index.rst
docs/en/api-reference/: esp_ps.rst  (+3 more)
docs/technical-details/: technical_details.rst
examples/blink/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/common_components/user_example_connect/: CMakeLists.txt  user_example_connect.c  user_example_connect.h
examples/esp_http_client/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/esp_user_ota/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
examples/http_request/: CMakeLists.txt  README.md  project_include.cmake  sdkconfig.defaults
examples/http_request/user_app/main/: CMakeLists.txt  user_code.c
examples/https_request/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/https_request/protected_app/main/: CMakeLists.txt  protected_main.c
examples/https_request/user_app/main/: CMakeLists.txt  user_code.c
examples/rmaker_switch/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
examples/rmaker_switch/components/rmaker_syscall/: CMakeLists.txt  rmaker_syscall.tbl  rmaker_syscall_priv.h  rmaker_syscalls.c  rmaker_wrappers.c
examples/rmaker_switch/components/rmaker_syscall/include/: rmaker_syscall.h
idf-patches/: privilege-separation_support_v4.3.2.patch  privilege-separation_support_v4.3.3.patch  privilege-separation_support_v4.3.patch  privilege-separation_support_v4.4.1.patch  privilege-separation_support_v4.4.2.patch  privilege-separation_support_v4.4.3.patch
tests/: ci_test.py
tests/violation_test/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
tools/: esp_ps_secure_boot_util.py  requirements.txt
(+63 files in other folders)
